# kdgi

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  HOWTO_branching.txt  README.md  build.sh  dfa.cc  git_merge.txt  gtest.cmake  main.cc  runexperiments.sh  template_unit_testing.cc  test_dfa.cc
gi/: CMakeLists.txt  angluindfa.cc  angluindfa.h  angluinlearner.cc  angluinlearner.h  angluinlearner.tcc  bluefringe.cc  bluefringe.h  bluestar.cc  bluestar.h  concretedfa.cc  concretedfa.h  dfa.cc  dfa.h  dfa.tcc  dfastate.cc  dfastate.h  dfastate.tcc  discrimnode.cc  discrimnode.h  edsm.cc  edsm.h  exceptions.h  learner.cc  learner.h  learner.tcc  main.cc  oracle.h  prova.cc  prova.h  randomoracle.h  randomoracle.tcc  redbluedfa.cc  redbluedfa.h  rpni.cc  rpni.h  sillyoracle.cc  sillyoracle.h  sillyoracle.tcc  tttdfa.cc  (+8 more)
gi/data/: _2_instance_of_aab.txt  _ab_aaaa.txt  _all.txt  _all_except_abab.txt  _no_repetitions.txt  _odd_a_odd_b.txt  _only_a.txt  dfa_test.txt
ker/: LSTMOracle.py  alutils.py  gen_csv_data.py  gen_model_template.py  rnn.py  svm.py  svr.py
ker/csv/: oracle10.csv  oracle4.csv  oracle6.csv
ker/models/: model4c.hdf5  model4c.txt  model6.hdf5  model6.txt  model6b.hdf5  model6b.txt  model6c.hdf5  model6c.txt  model_2.7.hdf5  model_2.7.txt  test.hdf5  test.txt  tomita4_115.hdf5  tomita4_140.hdf5  tomita4_140.txt  tomita4_155.hdf5  tomita4_25.hdf5  tomita4_30.hdf5  tomita4_45.hdf5  tomita4_45.txt
ker/models_backup/: model6.hdf5  model6b.hdf5
keras/: getdata.py  kerascode.py  kerastest.py  kerastest2.py  kerastest3.py  kerastestrand.py  oracle10.csv  oracle12.csv  oracle15.csv  oracle6.csv  oracle8.csv  output.txt  output10.txt  output12.txt  output15.txt  output8.txt  readme.txt  screen.txt  screentest.py  screentest.sh  testing10.py  testing12.py  testing15.py  testing8.py
lstm/: CMakeLists.txt  build.sh  lstm.cc  lstm.h  lstm.tcc  lstm.tcc.save
lstm/ker/: LSTMOracle.py  alutils.py  main.py  svm.py  svr.py
lstm/ker/csv/: oracle10.csv  oracle6.csv
lstm/ker/models/: model6.hdf5  model6.txt
py/: CMakeLists.txt  dfa.cc  gipy-boost.cc  gipy.cc  setup.py  setup.sh
py/copy_in_build_py/: bug.py  gen_dfa_template.py  gendata.py  percentage_experiment.py  readme.txt  test.py  test2.py  test3.py  test4.py  test5.py  test_rnn.py
py/copy_in_build_py/data/: 128.txt  144_originale.txt  2.txt  _ab_aaaa.txt  _all_except_abab.txt  _odd_a.txt  dfa_100_80.txt  dfa_2_100.txt  diamante4.txt  tesi_dfa1.txt  tomita12.txt  tomita15traslato.txt  tomita2.txt  tomita9.txt  two_states_one_sink.txt
py/copy_in_build_py/dfas/: topdf.sh
py/data/: dfa_14_59.txt  dfa_2_17.txt  dfarandom.txt  finaldfa.txt  random.txt  tesi_dfa1.dot  tesi_dfa1.txt  tesi_dfa2.dot  tesi_dfa2.txt  tomita1.txt  tomita10.txt  tomita11.txt  tomita12.txt  tomita13.txt  tomita15.txt  tomita2.txt  tomita3.txt  tomita4.txt  tomita5.txt  tomita6.txt  tomita7.txt  tomita8.txt  tomita9.txt
py/data/automata/: 1.txt  128.txt  144.txt  144_originale.txt  153.txt  2.txt  25.txt  3.txt  4.txt  5.txt  6.txt  7.txt  _2_instance_of_aab.txt  _no_repetitions.txt  dfa1_minimized.txt  dfa2_minimized.txt  dfa_100_100.txt  dfa_100_20.txt  dfa_100_40.txt  dfa_100_60.txt  dfa_100_80.txt  dfa_10_100.txt  dfa_10_20.txt  dfa_10_40.txt  dfa_10_60.txt  dfa_10_80.txt  dfa_14_59.txt  dfa_2_100.txt  dfa_2_17.txt  dfa_2_20.txt  dfa_2_40.txt  dfa_2_60.txt  dfa_2_80.txt  dfarandom.txt  diamante2.txt  diamante2_mod.txt  diamante3.txt  diamante4.txt  diamante_connesso.txt  diamante_senza_giri.txt  (+42 more)
py/data/automata/thesis/different_l/: dfa1.txt  dfa2.txt
py/data/automata/thesis/different_s/: astar.txt  not36a.txt
py/data/automata_dots/: dfa1_minimized.dot  dfa2_minimized.dot  palermo_ustica.dot  tomita15.dot  tomita15_modified.dot  tomita15invertito.dot  tomita15traslato.dot
py/data/doc/: struct_sim_results.docx  ~$ruct_sim_results.docx
py/data/others/: 0.txt  01.txt  diamante2.txt  diamante2_mod.txt  diamante3.txt  diamante4.txt  diamante_connesso.txt  diamante_senza_giri.txt  five_states_chain.txt  five_states_chain_one_sink.txt  paracadute.txt  paracadute2.txt  paracadute2_mod.txt  paracadute2_spec.txt  paracadute3.txt  paracadute5.txt  three_states_chain.txt  three_states_circle.txt  three_states_two_sinks.txt  tomita15_modified.txt  two_states_chain.txt  two_states_one_sink.txt
py/prove/: constructors.py  dimalphabet.py  globalsym.py  prova.py  read  read.cc  readfile.py  structsim.py  w-method.py
py/tests/: abbadingo.py  abbadingo_generation.py  abbadingo_inter_n_struct_sim.py  abbadingo_intra_n_struct_sim.py  bluestar.py  edsm.py  generatepdf.py  globalsym.py  read.py  readfile.py  rpni.py  structsim.py  temp.py  w-method.py
py/tests/data/: apt.txtAPTA.dot  bluestar_test.txt  bluestar_test_weighted.txt
py/tests/data/inferred_dfas/: bluestar_weights_inferred.dot  edsm_inferred.dot
py/tests/doc/: struct_sim_results.docx  tomita15_test_result.txt
py/tests/new_struct_sim_experiments/2_symbols/results/: intra_n_2_symbols_results.xlsx
py/tests/new_struct_sim_experiments/3_symbols/results/: intra_n_3_symbols_results.xlsx
py/tests/new_struct_sim_experiments/4_symbols/results/: intra_n_4_symbols_results.xlsx
py/tests/new_struct_sim_experiments/5_symbols/results/: intra_n_5_symbols_results.xlsx
py/tests/new_struct_sim_experiments/6_symbols/results/: intra_n_6_symbols_results.xlsx
py/tests/new_struct_sim_experiments/7_symbols/results/: intra_n_7_symbols_results.xlsx
py/tests/struct_sim_experiments/automata/n10/: n10_1.txt  (+9 more)
rnn/: main.py  movie_data_simple.csv  net.py  odd_a.py  oracle.csv  strpunct.py  tocsv.py
rnn/model/: sentiment-19.ckpt.index  sentiment-29.ckpt.index  sentiment-39.ckpt.index  sentiment-9.ckpt.index
rnnoracle/: CMakeLists.txt  rnnoracle.cc  rnnoracle.h  rnnoracle.tcc
unit_testing/: base_ang_test.cc  base_dfa_test.cc  base_dfastate_test.cc  bluefringe_test.cc  linguistic_similarity_test.cc  redbluedfa_test.cc  structural_similarity_test.cc  testBlueFringe.h  testDfa.h  testRedBlueDfa.h  tomita15_test.cc
unit_testing/data/: read_samples_test.txt  tomita14.txt  tomita15.txt
(+12662 files in other folders)
